[package]
name = "Bzll"
version = "0.1.0"
authors = ["linyiyu1992@gmail.com"]
description = """
Modern, fast and elegent game engine.

"""
keywords = ["opengl", "cross-platform", "game engine"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/whatever1992/Bzll"

[dependencies]
log = "*"
winit = "0.5"
glium = "*"
image = "*"
num = "*"
rand = "*"
lazy_static = "*"
time = "*"
hwloc = "0.4.0"
num_cpus = "*"
nom = "^2.1"
cgmath = "0.9.1"
genmesh = "0.4"
gfx = "0.14"
gfx_window_glutin = "*"
#toml = "0.3"
rustc-serialize = "0.3.22"
glutin = "0.7"

obj = { version = "0.5", features = ["usegenmesh"] }
flame = { version = "^0.1.9", optional = true }
flamer = { version = "^0.1.2", optional = true }

[target.'cfg(windows)'.dependencies]
winapi="*"
user32-sys="*"

[target.'cfg(unix)'.dependencies]

[target.'cfg(target_arch = "x86")'.dependencies]

[target.'cfg(target_arch = "x86_64")'.dependencies]

[features]
default = []
flame_it = ["flame", "flamer"]

[dev-dependencies]
